tests/baselines/reference/parserAccessibilityAfterStatic7.errors.txt
==== tests/cases/compiler/parserAccessibilityAfterStatic7.ts (1 errors) ====
    class Outer
    {
    static public intI() {}
           ~~~~~~
!!! parserAccessibilityAfterStatic7.ts(3,8): error TS1029: 'public' modifier must precede 'static' modifier.
    }
    